Store connection, User session data saved, Department Connection

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ HOST=http://localhost:3000
 NODE_ENV=development
 PORT=3000
 DATABASE_URL=postgres://localhost:5432/dillardsapp
+ADMIN_=smlcate@yahoo.com
+ADMIN_SECRET=s383838
