--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.13.4",
     "jade": "^1.11.0",
     "knex": "^0.11.7",
+    "localstorage": "^0.1.0",
     "morgan": "~1.6.1",
     "pg": "^6.0.1",
     "serve-favicon": "~2.3.0",
